fix icon spacing for drop down menu

--- a/css/scss/shared/_adaptive.scss
+++ b/css/scss/shared/_adaptive.scss
@@ -219,6 +219,7 @@ a.ibm-thumbnail-module h3 {
 // dropdown menu list styles
 .ibm-menu-list {
 		margin: 0 auto;
+		line-height: normal;
 }
 .ibm-menu-list div {
 	padding: 15px 0;
